# CurseForgeServerInstaller

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
docs/: CLI_DESIGN.md  FLOWCHART.md
mcserver/: cli.py  config.py  curseforge.py  download.py  errors.py  fs_ops.py  http_client.py  state.py
